--- a/디자인샘플.ui
+++ b/디자인샘플.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1600</width>
-    <height>801</height>
+    <height>785</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -1164,33 +1164,6 @@ color : white;</string>
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
-     <widget class="QLabel" name="label_23">
-      <property name="geometry">
-       <rect>
-        <x>800</x>
-        <y>730</y>
-        <width>101</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>15</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color : red;
-color : white;</string>
-      </property>
-      <property name="text">
-       <string>■</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
      <widget class="QLabel" name="label_32">
       <property name="geometry">
        <rect>
@@ -1202,9 +1175,11 @@ color : white;</string>
       </property>
       <property name="font">
        <font>
+        <family>Agency FB</family>
         <pointsize>15</pointsize>
         <weight>75</weight>
         <bold>true</bold>
+        <kerning>false</kerning>
        </font>
       </property>
       <property name="styleSheet">
@@ -1236,7 +1211,7 @@ color : white;</string>
       <widget class="QWidget" name="scrollAreaWidgetContents_3">
        <property name="geometry">
         <rect>
-         <x>-1</x>
+         <x>0</x>
          <y>0</y>
          <width>229</width>
          <height>636</height>
